vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_par_expr_block.vv
fn main() {
	($embed_file(@FILE))
}
